--- a/resources/lang/hu.json
+++ b/resources/lang/hu.json
@@ -1,5 +1,8 @@
 {
     "Diaspora": "Diaszpóra",
     "Argentine": "Argentína",
-    "Globe": "Földgömb"
+    "Globe": "Földgömb",
+    "Research": "Kutatás",
+    "Research Content": "A Szabadtéri Néprajzi Múzeum eredeti koncepcióját – a határainkon belüli népi építészet és\nlakáskultúra bemutatásának igényét – térben, tematikában és időben is kibővítette. A\nhatárainkon kívül élő magyarság kutatásának egyik fontos szegmensévé a diaszpórákban élő\nmagyarok életmódjának dokumentálása vált. A diaszpórakutatások eddigi célországai az\nAmerikai Egyesült Államok és Argentína lettek. Itt kutatják munkatársaink a kivándorolt\nmagyarság és leszármazottaik életmódját, szokásaikat. A diaszpórakutatások eredményeit egy\nkiállítási egységben, épületekkel és enteriőrökkel, illetve tematikus kiállításokkal tervezzük\nbemutatni a jövőben.\nAz amerikai diaszpórakutatáshoz eddig munkatársainkon kívül – Cseri Miklós, Kemecsi\nLajos, Bereczki Ibolya, Szigethy Zsófia – Balogh Balázs és Fülemile Ágnes is hozzájárult,\nhangsúlyt fektetve a terepmunkára, mikor is interjúk készítésével, fotók felkutatásával, épület\ndokumentálással és tárgygyűjtéssel készítették elő a majdan megvalósuló kiállítást. Addig is\nennek a virtuális kiállításnak a segítségével mutatjuk be a kutatás eddigi eredményeit.",
+    "sub_title-Vintondale": "Amerikai Egyesült Államok"
 }
